--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,7 @@
     "scripts": {
       "start:dev": "concurrently \"cd client && npm run build\" \"cd server && npm run start\" --include=dev",
       "start": "npm run build && cd server && node server.js",
-      "server": "cd server nodemon server.js --ignore client",
-      "build": "cd client && npm run build",
-      "install": "cd server && npm i && cd ../client && npm i",
-      "client": "cd client && npm start"
+      "server": "cd server nodemon server.js --ignore client"
     },
     "keywords": [],
     "author": "",
